--- a/scss/sections/__composicao.scss
+++ b/scss/sections/__composicao.scss
@@ -3,7 +3,7 @@
     padding-top: 60px;
 
     @media screen and (max-width: $bp-MD){
-        margin-top: 13px;
+        margin-top: 0px;
     }
 
     .container{
